--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,21 @@
 [submodule "brics_actuator"]
 	path = brics_actuator
-	url = ./brics_actuator/
+	url = https://github.com/wnowak/brics_actuator.git
 [submodule "image_common"]
 	path = image_common
-	url = ./image_common/
+	url = https://github.com/ros-perception/image_common.git
 [submodule "pr2_common"]
 	path = pr2_common
-	url = ./pr2_common/
+	url = https://github.com/PR2/pr2_common.git
 [submodule "youbot_description"]
 	path = youbot_description
-	url = ./youbot_description/
+	url = https://github.com/youbot/youbot_description.git
 [submodule "youbot_driver"]
 	path = youbot_driver
-	url = ./youbot_driver/
+	url = https://github.com/youbot/youbot_driver
 [submodule "youbot_driver_ros_interface"]
 	path = youbot_driver_ros_interface
-	url = ./youbot_driver_ros_interface/
+	url = http://github.com/youbot/youbot_driver_ros_interface.git
 [submodule "geometry2"]
 	path = geometry2
 	url = https://github.com/ros/geometry2.git
