--- a/.gitmodules
+++ b/.gitmodules
@@ -12,10 +12,10 @@
 	url = https://github.com/youbot/youbot_description.git
 [submodule "youbot_driver"]
 	path = youbot_driver
-	url = https://github.com/youbot/youbot_driver
+	url = https://github.com/ibcn-cloudlet/youbot_driver.git
 [submodule "youbot_driver_ros_interface"]
 	path = youbot_driver_ros_interface
-	url = http://github.com/youbot/youbot_driver_ros_interface.git
+	url = https://github.com/ibcn-cloudlet/youbot_driver_ros_interface.git
 [submodule "geometry2"]
 	path = geometry2
 	url = https://github.com/ros/geometry2.git
