--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "joystick_drivers"]
 	path = joystick_drivers
 	url = https://github.com/ros-drivers/joystick_drivers.git
+[submodule "youbot_torque_control"]
+	path = youbot_torque_control
+	url = https://github.com/ibcn-cloudlet/youbot_torque_control.git
